--- a/q_learning/acrobot_dqn.ipynb
+++ b/q_learning/acrobot_dqn.ipynb
@@ -525,7 +525,7 @@
     "  arma::mat action = {double(agent.Action().action)};\n",
     "\n",
     "  envTest.step(action);\n",
-    "  totalReward += env.reward;\n",
+    "  totalReward += envTest.reward;\n",
     "  totalSteps += 1;\n",
     "\n",
     "  if (envTest.done)\n",
