--- a/q_learning/cartpole_dqn.ipynb
+++ b/q_learning/cartpole_dqn.ipynb
@@ -128,7 +128,8 @@
    "outputs": [],
    "source": [
     "// Set up the network.\n",
-    "SimpleDQN<> model(4, 128, 32, 2);"
+    "SimpleDQN<> model(DiscreteActionEnv::State::dimension, 128, 32,\n",
+    "                  DiscreteActionEnv::Action::size);"
    ]
   },
   {
@@ -431,7 +432,7 @@
     "  arma::mat action = {double(agent.Action().action)};\n",
     "\n",
     "  envTest.step(action);\n",
-    "  totalReward += env.reward;\n",
+    "  totalReward += envTest.reward;\n",
     "  totalSteps += 1;\n",
     "\n",
     "  if (envTest.done)\n",
@@ -556,7 +557,7 @@
     "  arma::mat action = {double(agent.Action().action)};\n",
     "\n",
     "  envTest.step(action);\n",
-    "  totalReward += env.reward;\n",
+    "  totalReward += envTest.reward;\n",
     "  totalSteps += 1;\n",
     "\n",
     "  if (envTest.done)\n",
