--- a/q_learning/acrobot_dqn.ipynb
+++ b/q_learning/acrobot_dqn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://lab.mlpack.org/v2/gh/mlpack/examples/master?urlpath=lab%2Ftree%2Fq_learning%2Fcartpole_dqn.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://lab.mlpack.org/v2/gh/mlpack/examples/master?urlpath=lab%2Ftree%2Fq_learning%2Facrobot_dqn.ipynb)\n",
     "\n",
     "You can easily run this notebook at https://lab.mlpack.org/\n",
     "\n",
@@ -128,7 +128,8 @@
    "outputs": [],
    "source": [
     "// Set up the network.\n",
-    "SimpleDQN<> model(6, 64, 32, 3);"
+    "SimpleDQN<> model(DiscreteActionEnv::State::dimension, 64, 32,\n",
+    "                  DiscreteActionEnv::Action::size);"
    ]
   },
   {
@@ -351,7 +352,7 @@
     "  arma::mat action = {double(agent.Action().action)};\n",
     "\n",
     "  envTest.step(action);\n",
-    "  totalReward += env.reward;\n",
+    "  totalReward += envTest.reward;\n",
     "  totalSteps += 1;\n",
     "\n",
     "  if (envTest.done)\n",
