changes in network paramters

--- a/q_learning/acrobot_dqn.ipynb
+++ b/q_learning/acrobot_dqn.ipynb
@@ -128,8 +128,11 @@
    "outputs": [],
    "source": [
     "// Set up the network.\n",
-    "SimpleDQN<> model(DiscreteActionEnv::State::dimension, 64, 32,\n",
-    "                  DiscreteActionEnv::Action::size);"
+    "FFN<MeanSquaredError<>, RandomInitialization> module(MeanSquaredError<>(), RandomInitialization(-1, 1));\n",
+    "    module.Add<Linear<>>(DiscreteActionEnv::State::dimension, 64);\n",
+    "    module.Add<ReLULayer<>>();\n",
+    "    module.Add<Linear<>>(64, DiscreteActionEnv::Action::size);\n",
+    "SimpleDQN<FFN<MeanSquaredError<>, RandomInitialization>> model(module);"
    ]
   },
   {
@@ -237,7 +240,7 @@
     "    double averageReturn = std::accumulate(returnList.begin(),\n",
     "                                           returnList.end(), 0.0) /\n",
     "                           returnList.size();\n",
-    "    if(episodes % 1 == 0)\n",
+    "    if(episodes % 5 == 0)\n",
     "    {\n",
     "      std::cout << \"Avg return in last \" << consecutiveEpisodes\n",
     "          << \" episodes: \" << averageReturn\n",
@@ -264,108 +267,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training for 15000 steps.\n",
-      "Avg return in last 50 episodes: -500\t Episode return: -500\t Total steps: 500\n",
-      "Avg return in last 50 episodes: -500\t Episode return: -500\t Total steps: 1000\n",
-      "Avg return in last 50 episodes: -500\t Episode return: -500\t Total steps: 1500\n",
-      "Avg return in last 50 episodes: -439.5\t Episode return: -258\t Total steps: 1759\n",
-      "Avg return in last 50 episodes: -406.8\t Episode return: -276\t Total steps: 2036\n",
-      "Avg return in last 50 episodes: -355.167\t Episode return: -97\t Total steps: 2134\n",
-      "Avg return in last 50 episodes: -322\t Episode return: -123\t Total steps: 2258\n",
-      "Avg return in last 50 episodes: -304.75\t Episode return: -184\t Total steps: 2443\n",
-      "Avg return in last 50 episodes: -284.667\t Episode return: -124\t Total steps: 2568\n",
-      "Avg return in last 50 episodes: -265.7\t Episode return: -95\t Total steps: 2664\n",
-      "Avg return in last 50 episodes: -287\t Episode return: -500\t Total steps: 3164\n",
-      "Avg return in last 50 episodes: -274.583\t Episode return: -138\t Total steps: 3303\n",
-      "Avg return in last 50 episodes: -265.308\t Episode return: -154\t Total steps: 3458\n",
-      "Avg return in last 50 episodes: -254.786\t Episode return: -118\t Total steps: 3577\n",
-      "Avg return in last 50 episodes: -248.467\t Episode return: -160\t Total steps: 3738\n",
-      "Avg return in last 50 episodes: -241.75\t Episode return: -141\t Total steps: 3880\n",
-      "Avg return in last 50 episodes: -236.176\t Episode return: -147\t Total steps: 4028\n",
-      "Avg return in last 50 episodes: -230\t Episode return: -125\t Total steps: 4154\n",
-      "Avg return in last 50 episodes: -224.789\t Episode return: -131\t Total steps: 4286\n",
-      "Avg return in last 50 episodes: -223.45\t Episode return: -198\t Total steps: 4485\n",
-      "Avg return in last 50 episodes: -219.381\t Episode return: -138\t Total steps: 4624\n",
-      "Avg return in last 50 episodes: -219.909\t Episode return: -231\t Total steps: 4856\n",
-      "Avg return in last 50 episodes: -215.391\t Episode return: -116\t Total steps: 4973\n",
-      "Avg return in last 50 episodes: -227.25\t Episode return: -500\t Total steps: 5473\n",
-      "Avg return in last 50 episodes: -226.96\t Episode return: -220\t Total steps: 5694\n",
-      "Avg return in last 50 episodes: -222.154\t Episode return: -102\t Total steps: 5797\n",
-      "Avg return in last 50 episodes: -220.519\t Episode return: -178\t Total steps: 5976\n",
-      "Avg return in last 50 episodes: -217.536\t Episode return: -137\t Total steps: 6114\n",
-      "Avg return in last 50 episodes: -216.724\t Episode return: -194\t Total steps: 6309\n",
-      "Avg return in last 50 episodes: -213.7\t Episode return: -126\t Total steps: 6436\n",
-      "Avg return in last 50 episodes: -211.29\t Episode return: -139\t Total steps: 6576\n",
-      "Avg return in last 50 episodes: -207.812\t Episode return: -100\t Total steps: 6677\n",
-      "Avg return in last 50 episodes: -205.545\t Episode return: -133\t Total steps: 6811\n",
-      "Avg return in last 50 episodes: -205.382\t Episode return: -200\t Total steps: 7012\n",
-      "Avg return in last 50 episodes: -203.486\t Episode return: -139\t Total steps: 7152\n",
-      "Avg return in last 50 episodes: -202.083\t Episode return: -153\t Total steps: 7306\n",
-      "Avg return in last 50 episodes: -200.568\t Episode return: -146\t Total steps: 7453\n",
-      "Avg return in last 50 episodes: -198.684\t Episode return: -129\t Total steps: 7583\n",
-      "Avg return in last 50 episodes: -198.026\t Episode return: -173\t Total steps: 7757\n",
-      "Avg return in last 50 episodes: -196.15\t Episode return: -123\t Total steps: 7881\n",
-      "Avg return in last 50 episodes: -196.341\t Episode return: -204\t Total steps: 8086\n",
-      "Avg return in last 50 episodes: -194.167\t Episode return: -105\t Total steps: 8192\n",
-      "Avg return in last 50 episodes: -193.419\t Episode return: -162\t Total steps: 8355\n",
-      "Avg return in last 50 episodes: -192.841\t Episode return: -168\t Total steps: 8524\n",
-      "Avg return in last 50 episodes: -191.067\t Episode return: -113\t Total steps: 8638\n",
-      "Avg return in last 50 episodes: -189.891\t Episode return: -137\t Total steps: 8776\n",
-      "Avg return in last 50 episodes: -188.447\t Episode return: -122\t Total steps: 8899\n",
-      "Avg return in last 50 episodes: -187.021\t Episode return: -120\t Total steps: 9020\n",
-      "Avg return in last 50 episodes: -185.694\t Episode return: -122\t Total steps: 9143\n",
-      "Avg return in last 50 episodes: -184.02\t Episode return: -102\t Total steps: 9246\n",
-      "Avg return in last 50 episodes: -177.22\t Episode return: -160\t Total steps: 9407\n",
-      "Avg return in last 50 episodes: -169.66\t Episode return: -122\t Total steps: 9530\n",
-      "Avg return in last 50 episodes: -161.96\t Episode return: -115\t Total steps: 9646\n",
-      "Avg return in last 50 episodes: -159\t Episode return: -110\t Total steps: 9757\n",
-      "Avg return in last 50 episodes: -155.8\t Episode return: -116\t Total steps: 9874\n",
-      "Avg return in last 50 episodes: -156.26\t Episode return: -120\t Total steps: 9995\n",
-      "Avg return in last 50 episodes: -155.54\t Episode return: -87\t Total steps: 10083\n",
-      "Avg return in last 50 episodes: -154.54\t Episode return: -134\t Total steps: 10218\n",
-      "Avg return in last 50 episodes: -153.82\t Episode return: -88\t Total steps: 10307\n",
-      "Avg return in last 50 episodes: -153.82\t Episode return: -95\t Total steps: 10403\n",
-      "Avg return in last 50 episodes: -146.96\t Episode return: -157\t Total steps: 10561\n",
-      "Avg return in last 50 episodes: -146.24\t Episode return: -102\t Total steps: 10664\n",
-      "Avg return in last 50 episodes: -146.44\t Episode return: -164\t Total steps: 10829\n",
-      "Avg return in last 50 episodes: -146.96\t Episode return: -144\t Total steps: 10974\n",
-      "Avg return in last 50 episodes: -149.12\t Episode return: -268\t Total steps: 11243\n",
-      "Avg return in last 50 episodes: -148.72\t Episode return: -121\t Total steps: 11365\n",
-      "Avg return in last 50 episodes: -149.36\t Episode return: -179\t Total steps: 11545\n",
-      "Avg return in last 50 episodes: -150.36\t Episode return: -175\t Total steps: 11721\n",
-      "Avg return in last 50 episodes: -150.68\t Episode return: -147\t Total steps: 11869\n",
-      "Avg return in last 50 episodes: -148.38\t Episode return: -83\t Total steps: 11953\n",
-      "Avg return in last 50 episodes: -148.24\t Episode return: -131\t Total steps: 12085\n",
-      "Avg return in last 50 episodes: -146.52\t Episode return: -145\t Total steps: 12231\n",
-      "Avg return in last 50 episodes: -145.94\t Episode return: -87\t Total steps: 12319\n",
-      "Avg return in last 50 episodes: -137.88\t Episode return: -97\t Total steps: 12417\n",
-      "Avg return in last 50 episodes: -135.8\t Episode return: -116\t Total steps: 12534\n",
-      "Avg return in last 50 episodes: -137.24\t Episode return: -174\t Total steps: 12709\n",
-      "Avg return in last 50 episodes: -136.54\t Episode return: -143\t Total steps: 12853\n",
-      "Avg return in last 50 episodes: -135.72\t Episode return: -96\t Total steps: 12950\n",
-      "Avg return in last 50 episodes: -134.52\t Episode return: -134\t Total steps: 13085\n",
-      "Avg return in last 50 episodes: -134.5\t Episode return: -125\t Total steps: 13211\n",
-      "Avg return in last 50 episodes: -134.18\t Episode return: -123\t Total steps: 13335\n",
-      "Avg return in last 50 episodes: -133.72\t Episode return: -77\t Total steps: 13413\n",
-      "Avg return in last 50 episodes: -133.6\t Episode return: -127\t Total steps: 13541\n",
-      "Avg return in last 50 episodes: -132.88\t Episode return: -164\t Total steps: 13706\n",
-      "Avg return in last 50 episodes: -132.76\t Episode return: -133\t Total steps: 13840\n",
-      "Avg return in last 50 episodes: -132\t Episode return: -115\t Total steps: 13956\n",
-      "Avg return in last 50 episodes: -131.32\t Episode return: -112\t Total steps: 14069\n",
-      "Avg return in last 50 episodes: -131.08\t Episode return: -117\t Total steps: 14187\n",
-      "Avg return in last 50 episodes: -129.66\t Episode return: -102\t Total steps: 14290\n",
-      "Avg return in last 50 episodes: -129.38\t Episode return: -109\t Total steps: 14400\n",
-      "Avg return in last 50 episodes: -127.96\t Episode return: -133\t Total steps: 14534\n",
-      "Avg return in last 50 episodes: -127.9\t Episode return: -102\t Total steps: 14637\n",
-      "Avg return in last 50 episodes: -127.18\t Episode return: -126\t Total steps: 14764\n",
-      "Avg return in last 50 episodes: -126.16\t Episode return: -117\t Total steps: 14882\n",
-      "Avg return in last 50 episodes: -126.52\t Episode return: -131\t Total steps: 15014\n"
+      "Training for 20000 steps.\n",
+      "Avg return in last 50 episodes: -405.8\t Episode return: -411\t Total steps: 2032\n",
+      "Avg return in last 50 episodes: -377.8\t Episode return: -500\t Total steps: 3784\n",
+      "Avg return in last 50 episodes: -373\t Episode return: -274\t Total steps: 5605\n",
+      "Avg return in last 50 episodes: -352.55\t Episode return: -350\t Total steps: 7066\n",
+      "Avg return in last 50 episodes: -332.08\t Episode return: -241\t Total steps: 8322\n",
+      "Avg return in last 50 episodes: -307.1\t Episode return: -144\t Total steps: 9238\n",
+      "Avg return in last 50 episodes: -291.6\t Episode return: -136\t Total steps: 10236\n",
+      "Avg return in last 50 episodes: -272.575\t Episode return: -141\t Total steps: 10938\n",
+      "Avg return in last 50 episodes: -259.244\t Episode return: -204\t Total steps: 11706\n",
+      "Avg return in last 50 episodes: -244.98\t Episode return: -92\t Total steps: 12294\n",
+      "Avg return in last 50 episodes: -216.24\t Episode return: -110\t Total steps: 12891\n",
+      "Avg return in last 50 episodes: -191.52\t Episode return: -85\t Total steps: 13409\n",
+      "Avg return in last 50 episodes: -164.66\t Episode return: -95\t Total steps: 13888\n",
+      "Avg return in last 50 episodes: -149.36\t Episode return: -153\t Total steps: 14584\n",
+      "Avg return in last 50 episodes: -134.66\t Episode return: -76\t Total steps: 15105\n",
+      "Avg return in last 50 episodes: -127\t Episode return: -94\t Total steps: 15638\n",
+      "Avg return in last 50 episodes: -119.26\t Episode return: -129\t Total steps: 16249\n",
+      "Avg return in last 50 episodes: -117.58\t Episode return: -158\t Total steps: 16867\n",
+      "Avg return in last 50 episodes: -119.14\t Episode return: -207\t Total steps: 17713\n",
+      "Avg return in last 50 episodes: -118.38\t Episode return: -77\t Total steps: 18263\n",
+      "Avg return in last 50 episodes: -119.9\t Episode return: -157\t Total steps: 18936\n",
+      "Avg return in last 50 episodes: -121.5\t Episode return: -111\t Total steps: 19534\n"
      ]
     }
    ],
    "source": [
-    "// Training the agent for a total of at least 15000 steps.\n",
-    "train(15000)"
+    "// Training the agent for a total of at least 20000 steps.\n",
+    "train(20000)"
    ]
   },
   {
@@ -384,13 +314,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Total steps: 82\t Total reward: -81\n"
+      " Total steps: 128\t Total reward: -127\n",
+      "https://gym.kurg.org/87e592b31e824/output.webm\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "296cc2beadd64dffbcf970134e42ef79",
+       "model_id": "95f00a53957240e88de1d3a877fd1ede",
        "version_major": 2,
        "version_minor": 0
       },
@@ -447,7 +378,7 @@
     "\n",
     "envTest.close();\n",
     "std::string url = envTest.url();\n",
-    "\n",
+    "std::cout << url << std::endl;\n",
     "auto video = xw::video_from_url(url).finalize();\n",
     "video"
    ]
