added 2 tests in the end

--- a/q_learning/acrobot_dqn.ipynb
+++ b/q_learning/acrobot_dqn.ipynb
@@ -267,35 +267,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training for 20000 steps.\n",
-      "Avg return in last 50 episodes: -405.8\t Episode return: -411\t Total steps: 2032\n",
-      "Avg return in last 50 episodes: -377.8\t Episode return: -500\t Total steps: 3784\n",
-      "Avg return in last 50 episodes: -373\t Episode return: -274\t Total steps: 5605\n",
-      "Avg return in last 50 episodes: -352.55\t Episode return: -350\t Total steps: 7066\n",
-      "Avg return in last 50 episodes: -332.08\t Episode return: -241\t Total steps: 8322\n",
-      "Avg return in last 50 episodes: -307.1\t Episode return: -144\t Total steps: 9238\n",
-      "Avg return in last 50 episodes: -291.6\t Episode return: -136\t Total steps: 10236\n",
-      "Avg return in last 50 episodes: -272.575\t Episode return: -141\t Total steps: 10938\n",
-      "Avg return in last 50 episodes: -259.244\t Episode return: -204\t Total steps: 11706\n",
-      "Avg return in last 50 episodes: -244.98\t Episode return: -92\t Total steps: 12294\n",
-      "Avg return in last 50 episodes: -216.24\t Episode return: -110\t Total steps: 12891\n",
-      "Avg return in last 50 episodes: -191.52\t Episode return: -85\t Total steps: 13409\n",
-      "Avg return in last 50 episodes: -164.66\t Episode return: -95\t Total steps: 13888\n",
-      "Avg return in last 50 episodes: -149.36\t Episode return: -153\t Total steps: 14584\n",
-      "Avg return in last 50 episodes: -134.66\t Episode return: -76\t Total steps: 15105\n",
-      "Avg return in last 50 episodes: -127\t Episode return: -94\t Total steps: 15638\n",
-      "Avg return in last 50 episodes: -119.26\t Episode return: -129\t Total steps: 16249\n",
-      "Avg return in last 50 episodes: -117.58\t Episode return: -158\t Total steps: 16867\n",
-      "Avg return in last 50 episodes: -119.14\t Episode return: -207\t Total steps: 17713\n",
-      "Avg return in last 50 episodes: -118.38\t Episode return: -77\t Total steps: 18263\n",
-      "Avg return in last 50 episodes: -119.9\t Episode return: -157\t Total steps: 18936\n",
-      "Avg return in last 50 episodes: -121.5\t Episode return: -111\t Total steps: 19534\n"
+      "Training for 25000 steps.\n",
+      "Avg return in last 50 episodes: -476.4\t Episode return: -465\t Total steps: 2384\n",
+      "Avg return in last 50 episodes: -352.7\t Episode return: -141\t Total steps: 3534\n",
+      "Avg return in last 50 episodes: -289.267\t Episode return: -209\t Total steps: 4351\n",
+      "Avg return in last 50 episodes: -254.25\t Episode return: -106\t Total steps: 5102\n",
+      "Avg return in last 50 episodes: -225.68\t Episode return: -123\t Total steps: 5664\n",
+      "Avg return in last 50 episodes: -206.167\t Episode return: -87\t Total steps: 6212\n",
+      "Avg return in last 50 episodes: -192.743\t Episode return: -108\t Total steps: 6778\n",
+      "Avg return in last 50 episodes: -185.325\t Episode return: -146\t Total steps: 7450\n",
+      "Avg return in last 50 episodes: -194.822\t Episode return: -191\t Total steps: 8808\n",
+      "Avg return in last 50 episodes: -193.8\t Episode return: -164\t Total steps: 9736\n",
+      "Avg return in last 50 episodes: -158.52\t Episode return: -126\t Total steps: 10359\n",
+      "Avg return in last 50 episodes: -152.08\t Episode return: -165\t Total steps: 11187\n",
+      "Avg return in last 50 episodes: -147.74\t Episode return: -110\t Total steps: 11787\n",
+      "Avg return in last 50 episodes: -146.8\t Episode return: -152\t Total steps: 12491\n",
+      "Avg return in last 50 episodes: -152.56\t Episode return: -118\t Total steps: 13341\n",
+      "Avg return in last 50 episodes: -154.04\t Episode return: -90\t Total steps: 13963\n",
+      "Avg return in last 50 episodes: -155.62\t Episode return: -137\t Total steps: 14608\n",
+      "Avg return in last 50 episodes: -155.16\t Episode return: -94\t Total steps: 15257\n",
+      "Avg return in last 50 episodes: -140.96\t Episode return: -114\t Total steps: 15906\n",
+      "Avg return in last 50 episodes: -137.1\t Episode return: -101\t Total steps: 16641\n",
+      "Avg return in last 50 episodes: -135.5\t Episode return: -97\t Total steps: 17184\n",
+      "Avg return in last 50 episodes: -130.54\t Episode return: -117\t Total steps: 17764\n",
+      "Avg return in last 50 episodes: -132.14\t Episode return: -147\t Total steps: 18444\n",
+      "Avg return in last 50 episodes: -130.82\t Episode return: -120\t Total steps: 19082\n",
+      "Avg return in last 50 episodes: -127.92\t Episode return: -138\t Total steps: 19787\n",
+      "Avg return in last 50 episodes: -127.08\t Episode return: -105\t Total steps: 20367\n",
+      "Avg return in last 50 episodes: -126.92\t Episode return: -149\t Total steps: 21004\n",
+      "Avg return in last 50 episodes: -124.34\t Episode return: -113\t Total steps: 21524\n",
+      "Avg return in last 50 episodes: -122.36\t Episode return: -96\t Total steps: 22074\n",
+      "Avg return in last 50 episodes: -120.3\t Episode return: -85\t Total steps: 22706\n",
+      "Avg return in last 50 episodes: -121.28\t Episode return: -132\t Total steps: 23298\n",
+      "Avg return in last 50 episodes: -120.4\t Episode return: -90\t Total steps: 23834\n",
+      "Avg return in last 50 episodes: -117.22\t Episode return: -90\t Total steps: 24355\n",
+      "Avg return in last 50 episodes: -118.3\t Episode return: -151\t Total steps: 25047\n"
      ]
     }
    ],
    "source": [
-    "// Training the agent for a total of at least 20000 steps.\n",
-    "train(20000)"
+    "// Training the agent for a total of at least 25000 steps.\n",
+    "train(25000)"
    ]
   },
   {
@@ -308,20 +320,22 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Total steps: 128\t Total reward: -127\n",
-      "https://gym.kurg.org/87e592b31e824/output.webm\n"
+      " Total steps: 122\t Total reward: -121\n",
+      "https://gym.kurg.org/b52506a7015d4/output.webm\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95f00a53957240e88de1d3a877fd1ede",
+       "model_id": "ad6d8f816be24954b40b48957307872d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,6 +344,93 @@
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent.Deterministic() = true;\n",
+    "\n",
+    "// Creating and setting up the gym environment for testing.\n",
+    "gym::Environment envTest(\"gym.kurg.org\", \"4040\", \"Acrobot-v1\");\n",
+    "envTest.monitor.start(\"./dummy/\", true, true);\n",
+    "\n",
+    "// Resets the environment.\n",
+    "envTest.reset();\n",
+    "envTest.render();\n",
+    "\n",
+    "double totalReward = 0;\n",
+    "size_t totalSteps = 0;\n",
+    "\n",
+    "// Testing the agent on gym's environment.\n",
+    "while (1)\n",
+    "{\n",
+    "  // State from the environment is passed to the agent's internal representation.\n",
+    "  agent.State().Data() = envTest.observation;\n",
+    "\n",
+    "  // With the given state, the agent selects an action according to its defined policy.\n",
+    "  agent.SelectAction();\n",
+    "\n",
+    "  // Action to take, decided by the policy.\n",
+    "  arma::mat action = {double(agent.Action().action)};\n",
+    "\n",
+    "  envTest.step(action);\n",
+    "  totalReward += envTest.reward;\n",
+    "  totalSteps += 1;\n",
+    "\n",
+    "  if (envTest.done)\n",
+    "  {\n",
+    "    std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
+    "        << totalReward << std::endl;\n",
+    "    break;\n",
+    "  }\n",
+    "\n",
+    "  // Uncomment the following lines to see the reward and action in each step.\n",
+    "  // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
+    "  //   << totalReward << \"\\t Action taken: \" << action;\n",
+    "}\n",
+    "\n",
+    "envTest.close();\n",
+    "std::string url = envTest.url();\n",
+    "std::cout << url << std::endl;\n",
+    "auto video = xw::video_from_url(url).finalize();\n",
+    "video"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Due to the stochasticity of the environment, it's quite possible that sometimes the agent is not able to solve it in each test. So, we test the agent once more, just to be sure.\n",
+    "\n",
+    "You may test the agent any no of times by rerunning either of the testing cells. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total steps: 151\t Total reward: -150\n",
+      "https://gym.kurg.org/be13778abc714/output.webm\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74bd5f316a664f84bf16742466f2c6bd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
