--- a/q_learning/acrobot_dqn.ipynb
+++ b/q_learning/acrobot_dqn.ipynb
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Function to train the agent on mlpack's own implementation of the CartPole environment.\n",
+    "// Function to train the agent on the Acrobot-v1 gym environment.\n",
     "void train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
