minor doc change

--- a/q_learning/mountain_car_dqn.ipynb
+++ b/q_learning/mountain_car_dqn.ipynb
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Function to train the agent on mlpack's own implementation of the CartPole environment.\n",
+    "// Function to train the agent on the MountainCar-v0 gym environment.\n",
     "void train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
