minor changes in docs

--- a/q_learning/acrobot_dqn.ipynb
+++ b/q_learning/acrobot_dqn.ipynb
@@ -129,9 +129,9 @@
    "source": [
     "// Set up the network.\n",
     "FFN<MeanSquaredError<>, RandomInitialization> module(MeanSquaredError<>(), RandomInitialization(-1, 1));\n",
-    "    module.Add<Linear<>>(DiscreteActionEnv::State::dimension, 64);\n",
-    "    module.Add<ReLULayer<>>();\n",
-    "    module.Add<Linear<>>(64, DiscreteActionEnv::Action::size);\n",
+    "module.Add<Linear<>>(DiscreteActionEnv::State::dimension, 64);\n",
+    "module.Add<ReLULayer<>>();\n",
+    "module.Add<Linear<>>(64, DiscreteActionEnv::Action::size);\n",
     "SimpleDQN<FFN<MeanSquaredError<>, RandomInitialization>> model(module);"
    ]
   },
@@ -403,7 +403,7 @@
    "source": [
     "Due to the stochasticity of the environment, it's quite possible that sometimes the agent is not able to solve it in each test. So, we test the agent once more, just to be sure.\n",
     "\n",
-    "You may test the agent any no of times by rerunning either of the testing cells. "
+    "You may test the agent any number of times by rerunning either of the testing cells. "
    ]
   },
   {
