--- a/q_learning/pendulum_dqn.ipynb
+++ b/q_learning/pendulum_dqn.ipynb
@@ -204,7 +204,7 @@
     "\n",
     "Now, we subtract `1.0` from the actions, which then becomes the input to the environment. This essentially means that we correspond the actions `0`, `1`, and `2` given by the agent, to the torque values `-1.0`, `0`, and `1.0` for the environment, respectively.\n",
     "\n",
-    "This simple trick allows us to train a continuous action-space environment using dqn.\n",
+    "This simple trick allows us to train a continuous action-space environment using DQN.\n",
     "\n",
     "Note that we have divided the action-space into 3 divisions here. But you may use any number of divisions as per your choice. More the number of divisions, finer are the controls available for the agent, and therefore better are the results!"
    ]
@@ -417,7 +417,7 @@
     }
    ],
    "source": [
-    "// Training the same agent for a total of at least 20000 episodes.\n",
+    "// Training the same agent for a total of at least 20000 steps.\n",
     "train(20000)"
    ]
   },
