--- a/q_learning/lunar_lander_dqn.ipynb
+++ b/q_learning/lunar_lander_dqn.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Function to train the agent on mlpack's own implementation of the CartPole environment.\n",
+    "// Function to train the agent on the gym implementation of LunarLander environment.\n",
     "void train(const size_t numSteps)\n",
     "{\n",
     "  agent.Deterministic() = false;\n",
